--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "gh-pages": "^5.0.0",
     "puppeteer": "^20.8.0",
     "vite": "^4.4.2"
+  },
+  "dependencies": {
+    "seedrandom": "^3.0.5"
   }
 }
